[tool.poetry]
name = "ti08-lab-5"
version = "0.1.0"
description = ""
authors = ["Indra Lingga Saputra <indralinggasaputraa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
